# AgentStack

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/core/config/: logging.py  settings.py
app/core/langgraph/: graph.py
app/core/langgraph/tools/: __init__.py  duckduck_search.py
app/core/prompts/: __init__.py  system.md
app/services/: database.py  llm.py
docker/: docker-compose.yml
